--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,15 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
-logging.level.com.sss.community=debug
+#logging.level.com.sss.community=debug
+
+#MailProperties
+spring.mail.host=smtp.126.com
+spring.mail.port=465
+spring.mail.username=bushihentian@126.com
+spring.mail.password=KQBIVYNBSJHCDKOF
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+#community
+community.path.domain=http://localhost:8080
