修改头像（带拦截器）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,6 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 #community
 community.path.domain=http://localhost:8080
+
+# 文件上传到的目录
+community.path.upload=d:/work/data/upload
