--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,8 @@ community.path.domain=http://localhost:8080
 
 # 文件上传到的目录
 community.path.upload=d:/work/data/upload
+
+# RedisProperties
+spring.redis.database=10
+spring.redis.host=localhost
+spring.redis.port=6379
