--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,3 +48,8 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=community-consumer-group
 spring.kafka.consumer.enable-auto-commit=true
 spring.kafka.consumer.auto-commit-interval=3000ms
+
+#ElasticsearchProperties
+#spring.data.elasticsearch.cluster-name=sss
+#spring.data.elasticsearch.cluster-node=127.0.0.1:9300
+spring.elasticsearch.rest.uris=http://localhost:9200 
