--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,20 @@ spring.kafka.consumer.auto-commit-interval=3000ms
 #spring.data.elasticsearch.cluster-name=sss
 #spring.data.elasticsearch.cluster-node=127.0.0.1:9300
 spring.elasticsearch.rest.uris=http://localhost:9200 
+
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+# TaskSchedulingProperties
+spring.task.scheduling.pool.size=5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
