--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
@@ -27,8 +27,8 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #MailProperties
 spring.mail.host=smtp.126.com
 spring.mail.port=465
-spring.mail.username=bushihentian@126.com
-spring.mail.password=KQBIVYNBSJHCDKOF
+spring.mail.username=
+spring.mail.password=
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
 
@@ -70,3 +70,15 @@ spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+# wk;
+wk.image.command=D:/SoftWare/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.storage=D:/SoftWare/wkhtmltopdf/wk/img
+
+# qiniu
+qiniu.key.access=
+qiniu.key.secret=
+qiniu.bucket.header.name=sss-community-header
+qiniu.bucket.header.url=
+qiniu.bucket.share.name=sss-community-share
+qiniu.bucket.share.url=
