使用caffeine实现热帖缓存

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,3 +82,6 @@ qiniu.bucket.header.name=sss-community-header
 qiniu.bucket.header.url=
 qiniu.bucket.share.name=sss-community-share
 qiniu.bucket.share.url=
+# caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
