--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
 			<version>7.4.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.ben-manes.caffeine</groupId>
+			<artifactId>caffeine</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
