单元测试test + 监控模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
@@ -27,8 +27,8 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #MailProperties
 spring.mail.host=smtp.126.com
 spring.mail.port=465
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=bushihentian@126.com
+spring.mail.password=KQBIVYNBSJHCDKOF
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
 
@@ -71,17 +71,22 @@ spring.quartz.properties.org.quartz.jobStore.isClustered=true
 spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 spring.quartz.properties.org.quartz.threadPool.threadCount=5
 
-# wk;
+# wk
 wk.image.command=D:/SoftWare/wkhtmltopdf/bin/wkhtmltoimage
 wk.image.storage=D:/SoftWare/wkhtmltopdf/wk/img
 
 # qiniu
-qiniu.key.access=
-qiniu.key.secret=
+qiniu.key.access=rzflXz9KYjkS3Wy3mSlu7nSz1Wp9GK9HqZfLqB-Q
+qiniu.key.secret=Z3qxulP6bUqbHJVrHEbsCbnX1EokHPOCWwBp2M-h
 qiniu.bucket.header.name=sss-community-header
-qiniu.bucket.header.url=
+qiniu.bucket.header.url=http://rh44qd1qy.hd-bkt.clouddn.com
 qiniu.bucket.share.name=sss-community-share
-qiniu.bucket.share.url=
+qiniu.bucket.share.url=http://rh448nly4.hd-bkt.clouddn.com
+
 # caffeine
 caffeine.posts.max-size=15
 caffeine.posts.expire-seconds=180
+
+# actuator
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=info,caches
